Put conversation view layout in XML file
and fix message divider background for lower API levels.

--- a/briar-android/res/values/strings.xml
+++ b/briar-android/res/values/strings.xml
@@ -113,6 +113,7 @@
     <string name="step">Step %1$d/%2$d</string>
     <string name="online">Online</string>
     <string name="offline">Offline</string>
+    <string name="send">Send</string>
 
     <!-- Dialogs -->
     <string name="dialog_title_lost_password">Lost password</string>
