Show all transports on the dashboard
and indicate which transports are currently available.
The icons have been chosen from the official material icons and might be
replaced later with icons that better represent the given transport.

Please note that I used vector drawables which will be automatically
converted at build time to raster graphics.

Closes #96

--- a/briar-android/res/values/strings.xml
+++ b/briar-android/res/values/strings.xml
@@ -117,9 +117,9 @@
     <string name="offline">Offline</string>
     <string name="send">Send</string>
     <string name="data_transports">Data Transports</string>
-    <string name="transport_tor">Internet via Tor</string>
+    <string name="transport_tor">Internet</string>
     <string name="transport_bt">Bluetooth</string>
-    <string name="transport_lan">Local Area Network</string>
+    <string name="transport_lan">Wi-Fi</string>
 
     <!-- Dialogs -->
     <string name="dialog_title_lost_password">Lost password</string>
