--- a/briar-android/res/values/strings.xml
+++ b/briar-android/res/values/strings.xml
@@ -126,4 +126,6 @@
     <!-- Dialogs -->
     <string name="dialog_title_lost_password">Lost password</string>
     <string name="dialog_message_lost_password">Password recovery is not possible. Do you wish to delete your user, all contacts, and re-register ?</string>
+    <string name="dialog_title_delete_contact">Confirm Contact Deletion</string>
+    <string name="dialog_message_delete_contact">Are you sure that you want to remove this contact and all messages exchanged with this contact?</string>
 </resources>
