Improve PasswordActivity by
* removing screen border visible on small screens
* showing noticeable error message on wrong password input
* showing keyboard again after entering wrong password
* making lost password link easier to recognize as link
* renaming keyboard toggle method from 'hide' to 'toggle'

--- a/briar-android/res/values/strings.xml
+++ b/briar-android/res/values/strings.xml
@@ -19,7 +19,7 @@
     <string name="yes">Yes</string>
     <string name="no">No</string>
     <string name="forgotten_password">I have forgotten my password</string>
-    <string name="try_again">Wrong password, try again:</string>
+    <string name="try_again">Wrong password, try again!</string>
     <string name="sign_in_button">Sign In</string>
     <string name="startup_failed_notification_title">Briar could not start</string>
     <string name="startup_failed_notification_text">You may need to reinstall Briar.</string>
