--- a/briar-android/res/values/strings.xml
+++ b/briar-android/res/values/strings.xml
@@ -4,11 +4,13 @@
 	<string name="nav_drawer_close_description">Close the navigation drawer</string>
 	<string name="app_name">Briar</string>
 	<string name="crash_report_title">Briar Crash Report</string>
+	<string name="feedback_title">Feedback</string>
 	<string name="describe_crash">Describe what happened</string>
+	<string name="enter_feedback">Enter your feedback</string>
 	<string name="optional_contact_email">Optional contact email</string>
-	<string name="could_not_load_crash_data">Could not load crash data.</string>
-	<string name="crash_report_saved">Crash report saved. It will be sent the next time you log into Briar.</string>
-	<string name="crash_report_not_saved">Could not save crash report to disk.</string>
+	<string name="include_debug_report">Include debug report?</string>
+	<string name="could_not_load_report_data">Could not load report data.</string>
+	<string name="dev_report_saved">Report saved. It will be sent the next time you log into Briar.</string>
 	<string name="ongoing_notification_title">Signed into Briar</string>
 	<string name="ongoing_notification_text">Touch to show the dashboard.</string>
 	<string name="setup_title">Briar Setup</string>
