--- a/briar-android/res/values/strings.xml
+++ b/briar-android/res/values/strings.xml
@@ -153,15 +153,15 @@
 	<string name="introduction_warn_different_identities_title">Warning: Different Identities</string>
 	<string name="introduction_warn_different_identities_text">You are trying to introduce two contacts that you have added with different identities. This might reveal that both identities are yours.</string>
 	<string name="introduction_request_sent">You have asked to introduce %1$s to %2$s.</string>
-	<string name="introduction_request_received">%1$s introduced you to %2$s. Do you want to add %2$s to your contact list?</string>
-	<string name="introduction_request_exists_received">%1$s introduced you to %2$s, but %2$s is already in your contact list. Since %1$s might not know that, you can still respond:</string>
+	<string name="introduction_request_received">%1$s has asked to introduce you to %2$s. Do you want to add %2$s to your contact list?</string>
+	<string name="introduction_request_exists_received">%1$s has asked to introduce you to %2$s, but %2$s is already in your contact list. Since %1$s might not know that, you can still respond:</string>
 	<string name="introduction_request_answered_received">%1$s has asked to introduce you to %2$s.</string>
 	<string name="introduction_response_accepted_sent">You accepted the introduction to %1$s.</string>
 	<string name="introduction_response_declined_sent">You declined the introduction to %1$s.</string>
 	<string name="introduction_response_accepted_received">%1$s accepted to be introduced to %2$s.</string>
 	<string name="introduction_response_declined_received">%1$s declined to be introduced to %2$s.</string>
 	<string name="introduction_success_title">Introduced contact was added</string>
-	<string name="introduction_success_text">You have been successfully introduced to %1$s who was now added to your contact list.</string>
+	<string name="introduction_success_text">You have been introduced to %1$s.</string>
 
 	<!-- Dialogs -->
 	<string name="dialog_title_lost_password">Lost Password</string>
