--- a/briar-android/res/values/strings.xml
+++ b/briar-android/res/values/strings.xml
@@ -85,8 +85,7 @@
 	<string name="choose_forum_name">Choose a name for your forum:</string>
 	<string name="create_forum_button">Create Forum</string>
 	<string name="forum_created_toast">Forum created</string>
-	<string name="forum_share_with_all">Share this forum with all contacts</string>
-	<string name="forum_share_with_some">Share this forum with chosen contacts</string>
+	<string name="forum_share_action">Share this forum with chosen contacts</string>
 	<string name="forum_share_button">Share Forum</string>
 	<string name="forum_compose_post">New Forum Post</string>
 	<string name="from">From:</string>
@@ -204,6 +203,7 @@
 	<string name="settings_toolbar_header">Settings</string>
 	<string name="contacts_toolbar_header">Contacts</string>
 	<string name="forums_toolbar_header">Forums</string>
+	<string name="forums_share_toolbar_header">Choose Contacts</string>
 	<!-- Progress titles -->
 	<string name="progress_title_logout">Signing out of Briar..</string>
 	<string name="progress_title_please_wait">Please wait..</string>
