--- a/briar-android/res/values/strings.xml
+++ b/briar-android/res/values/strings.xml
@@ -92,6 +92,11 @@
 	<string name="forum_created_toast">Forum created</string>
 	<string name="forum_share_action">Share this forum with chosen contacts</string>
 	<string name="forum_share_button">Share Forum</string>
+	<string name="forum_shared_snackbar">Forum shared with chosen contacts</string>
+	<string name="forum_share_message">You may compose an optional invitation message that will be sent to the selected contacts.</string>
+	<string name="forum_invitation_received">%1$s has shared the forum \"%2$s\" with you.</string>
+	<string name="forum_invitation_sent">You have shared the forum \"%1$s\" with %2$s.</string>
+	<string name="forum_show_available">Show Available Forums</string>
 	<string name="forum_compose_post">New Forum Post</string>
 	<string name="from">From:</string>
 	<string name="anonymous">Anonymous</string>
