--- a/briar-android/res/values/strings.xml
+++ b/briar-android/res/values/strings.xml
@@ -77,6 +77,7 @@
 		<item quantity="one">%d forum shared by contacts</item>
 		<item quantity="other">%d forums shared by contacts</item>
 	</plurals>
+	<string name="show_forums">Show</string>
 	<string name="unsubscribe">Unsubscribe</string>
 	<string name="unsubscribed_toast">Unsubscribed</string>
 	<string name="no_forum_posts">No posts</string>
